@@ -1,5 +1,10 @@
 2018-04-08  Andrew Burgess  <andrew.burgess@embecosm.com>
 
+	* riscv-tdep.c (riscv_register_name): Only return names for actual
+	CSR register numbers, return NULL for anything else.
+
+2018-04-08  Andrew Burgess  <andrew.burgess@embecosm.com>
+
 	* riscv-tdep.h: Number CSRs from the first CSR number, not from
 	the last FP register.
 
